test/core/errors/sql_databases_error/zs/empty_database_error.zs
package empty_database_error;

sql_database EmptyDatabase
{
    // empty database is not allowed!
};
